src/parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { root: peg$parseroot },
      peg$startRuleFunction  = peg$parseroot,

      peg$c0 = function(expressions) {return new LatexNode("root", expressions)},
      peg$c1 = function(units) {
          return new LatexExpression(units);
          },
      peg$c2 = "{",
      peg$c3 = peg$literalExpectation("{", false),
      peg$c4 = "}",
      peg$c5 = peg$literalExpectation("}", false),
      peg$c6 = function(inner) {
          let arg = [];
          arg.push(inner);
          return new LatexExpression(arg, "curly");},
      peg$c7 = "(",
      peg$c8 = peg$literalExpectation("(", false),
      peg$c9 = ")",
      peg$c10 = peg$literalExpectation(")", false),
      peg$c11 = function(inner) {
          let arg = [];
          arg.push(inner);
          return new LatexExpression(arg, "round");},
      peg$c12 = "[",
      peg$c13 = peg$literalExpectation("[", false),
      peg$c14 = "]",
      peg$c15 = peg$literalExpectation("]", false),
      peg$c16 = function(inner) {
          let arg = [];
          arg.push(inner);
          return new LatexExpression(arg, "square");
      },
      peg$c17 = function(left) {
          return left;
      },
      peg$c18 = "^",
      peg$c19 = peg$literalExpectation("^", false),
      peg$c20 = "\\circ",
      peg$c21 = peg$literalExpectation("\\circ", false),
      peg$c22 = function(arg) {
          return new LatexFunction("degrees", [arg]);
      },
      peg$c23 = peg$otherExpectation("function"),
      peg$c24 = function(exp) {return exp;},
      peg$c25 = "f",
      peg$c26 = peg$literalExpectation("f", false),
      peg$c27 = "g",
      peg$c28 = peg$literalExpectation("g", false),
      peg$c29 = "h",
      peg$c30 = peg$literalExpectation("h", false),
      peg$c31 = function(ltr) {
          return new LatexCharacter(ltr);
      },
      peg$c32 = function(arg) {return arg;},
      peg$c33 = "|",
      peg$c34 = peg$literalExpectation("|", false),
      peg$c35 = function(arg) {return new LatexFunction("abs", [arg]);},
      peg$c36 = "\\displaystyle",
      peg$c37 = peg$literalExpectation("\\displaystyle", false),
      peg$c38 = "\\binom",
      peg$c39 = peg$literalExpectation("\\binom", false),
      peg$c40 = function(n, k) {
          return new LatexFunction("binomial", [n, k]);
      },
      peg$c41 = "\\log",
      peg$c42 = peg$literalExpectation("\\log", false),
      peg$c43 = "_",
      peg$c44 = peg$literalExpectation("_", false),
      peg$c45 = "10",
      peg$c46 = peg$literalExpectation("10", false),
      peg$c47 = function(arg) {
          return new LatexFunction("logarithm_10", [arg]);
      },
      peg$c48 = function(base, arg) {
          return new LatexFunction("logarithm", [base, arg]);
      },
      peg$c49 = "\\ln",
      peg$c50 = peg$literalExpectation("\\ln", false),
      peg$c51 = function(arg) {
          return new LatexFunction("logarithm_ln", [arg])
      },
      peg$c52 = function(exp, arg) {
          return new LatexFunction("logartihm_10", [arg], exp);},
      peg$c53 = function(exp, arg) {
          return new LatexFunction("logarithm_10", [arg], exp);
      },
      peg$c54 = function(exp, base, arg) {
          return new LatexFunction("logarithm", [base, arg], exp);
      },
      peg$c55 = function(exp, arg) {
          return new LatexFunction("logarithm_ln", [arg], exp)
      },
      peg$c56 = "\\lim",
      peg$c57 = peg$literalExpectation("\\lim", false),
      peg$c58 = function(lower, arg) {
          return new LatexFunction("limit", [...lower, arg]);
      },
      peg$c59 = "\\longrightarrow",
      peg$c60 = peg$literalExpectation("\\longrightarrow", false),
      peg$c61 = "\\to",
      peg$c62 = peg$literalExpectation("\\to", false),
      peg$c63 = function(opvar1, opvar2) {
          return [opvar1, opvar2];
      },
      peg$c64 = "=",
      peg$c65 = peg$literalExpectation("=", false),
      peg$c66 = function(name, input, arg) {
          return new LatexFunction("latex_function", [name, input, arg])
      },
      peg$c67 = "-",
      peg$c68 = peg$literalExpectation("-", false),
      peg$c69 = "1",
      peg$c70 = peg$literalExpectation("1", false),
      peg$c71 = function(name, input, arg) {
          return new LatexFunction("latex_function_inverse", [name, input, arg]);
      },
      peg$c72 = "'",
      peg$c73 = peg$literalExpectation("'", false),
      peg$c74 = "\\prime",
      peg$c75 = peg$literalExpectation("\\prime", false),
      peg$c76 = function(name, input, arg) {
          return new LatexFunction("derivative", [name, input, arg]);
      },
      peg$c77 = "\\",
      peg$c78 = peg$literalExpectation("\\", false),
      peg$c79 = function(name, arg) {
          return new LatexFunction("regular", [name, arg])
      },
      peg$c80 = function(name, exp, arg) {
          return new LatexFunction("regular", [name, arg], exp);
      },
      peg$c81 = function(arg) {return new LatexCharacter(specialSymbols[arg]);},
      peg$c82 = "\\frac",
      peg$c83 = peg$literalExpectation("\\frac", false),
      peg$c84 = function(arg1, arg2) {
          return new LatexFunction("fraction", [arg1, arg2]);
      },
      peg$c85 = "\\overline",
      peg$c86 = peg$literalExpectation("\\overline", false),
      peg$c87 = function(arg) {
          return new LatexFunction("mean", [arg]);
      },
      peg$c88 = "sinh",
      peg$c89 = peg$literalExpectation("sinh", false),
      peg$c90 = "cosh",
      peg$c91 = peg$literalExpectation("cosh", false),
      peg$c92 = "coth",
      peg$c93 = peg$literalExpectation("coth", false),
      peg$c94 = "cos",
      peg$c95 = peg$literalExpectation("cos", false),
      peg$c96 = "sec",
      peg$c97 = peg$literalExpectation("sec", false),
      peg$c98 = "tan",
      peg$c99 = peg$literalExpectation("tan", false),
      peg$c100 = "cot",
      peg$c101 = peg$literalExpectation("cot", false),
      peg$c102 = "ctg",
      peg$c103 = peg$literalExpectation("ctg", false),
      peg$c104 = "csc",
      peg$c105 = peg$literalExpectation("csc", false),
      peg$c106 = "sin",
      peg$c107 = peg$literalExpectation("sin", false),
      peg$c108 = "acos",
      peg$c109 = peg$literalExpectation("acos", false),
      peg$c110 = "asin",
      peg$c111 = peg$literalExpectation("asin", false),
      peg$c112 = "arcsin",
      peg$c113 = peg$literalExpectation("arcsin", false),
      peg$c114 = "arccos",
      peg$c115 = peg$literalExpectation("arccos", false),
      peg$c116 = "arcctg",
      peg$c117 = peg$literalExpectation("arcctg", false),
      peg$c118 = "arccot",
      peg$c119 = peg$literalExpectation("arccot", false),
      peg$c120 = "arctan",
      peg$c121 = peg$literalExpectation("arctan", false),
      peg$c122 = "tg",
      peg$c123 = peg$literalExpectation("tg", false),
      peg$c124 = function(name) {
          return new LatexCharacter(name);
      },
      peg$c125 = "\\sqrt",
      peg$c126 = peg$literalExpectation("\\sqrt", false),
      peg$c127 = function(arg) {
          let argArr = [arg];
          return new LatexFunction("sqrt", argArr);},
      peg$c128 = function(n, arg) {
          let argArr = [n, arg];
          return new LatexFunction("sqrt", argArr);
      },
      peg$c129 = "\\int",
      peg$c130 = peg$literalExpectation("\\int", false),
      peg$c131 = "d",
      peg$c132 = peg$literalExpectation("d", false),
      peg$c133 = function(arg, opvar) {
          return new LatexFunction("integral", [arg, opvar]);
      },
      peg$c134 = function(lb, ub, arg, opvar) {
          return new LatexFunction("integral", [lb, ub, arg, opvar]);
      },
      peg$c135 = function(ub, lb, arg, opvar) {
          return new LatexFunction("integral", [lb, ub, arg, opvar])
      },
      peg$c136 = peg$otherExpectation("environment"),
      peg$c137 = "\\begin",
      peg$c138 = peg$literalExpectation("\\begin", false),
      peg$c139 = "\\end",
      peg$c140 = peg$literalExpectation("\\end", false),
      peg$c141 = function(arg, last_arg) {
          arg.push(last_arg);
          return new LatexEnvironment("system", arg);
      },
      peg$c142 = "cases",
      peg$c143 = peg$literalExpectation("cases", false),
      peg$c144 = "align",
      peg$c145 = peg$literalExpectation("align", false),
      peg$c146 = "\\\\",
      peg$c147 = peg$literalExpectation("\\\\", false),
      peg$c148 = "&",
      peg$c149 = peg$literalExpectation("&", false),
      peg$c150 = function(a, b, c, d) {
          return new LatexEnvironment("det2", [a, b, c, d]);
      },
      peg$c151 = function(a, b, c, d, e, f, g, h, i) {
          return new LatexEnvironment("det3", [a,b,c,d,e,f,g,h,i]);
      },
      peg$c152 = "bmatrix",
      peg$c153 = peg$literalExpectation("bmatrix", false),
      peg$c154 = "vmatrix",
      peg$c155 = peg$literalExpectation("vmatrix", false),
      peg$c156 = peg$otherExpectation("number"),
      peg$c157 = " ",
      peg$c158 = peg$literalExpectation(" ", false),
      peg$c159 = function(terminals) {
          let terminalsNoSpaces = [];
          for(let terminal of terminals)
          {
              if (terminal != ' ')
              {
                  terminalsNoSpaces.push(terminal);
              }
          }
          return new LatexCalcunit(terminalsNoSpaces);
      },
      peg$c160 = /^[+\-*\/\^=<>._!]/,
      peg$c161 = peg$classExpectation(["+", "-", "*", "/", "^", "=", "<", ">", ".", "_", "!"], false, false),
      peg$c162 = function(arg) {
          return new LatexCharacter(arg);
      },
      peg$c163 = /^[a-zA-Z+\-*\/]/,
      peg$c164 = peg$classExpectation([["a", "z"], ["A", "Z"], "+", "-", "*", "/"], false, false),
      peg$c165 = function(char) {
          return new LatexCharacter(char);
      },
      peg$c166 = function(char) {
          return new LatexCharacter(specialSymbols[char]);
      },
      peg$c167 = peg$otherExpectation("special symbol"),
      peg$c168 = "\\pi",
      peg$c169 = peg$literalExpectation("\\pi", false),
      peg$c170 = "\\infty",
      peg$c171 = peg$literalExpectation("\\infty", false),
      peg$c172 = "\\alpha",
      peg$c173 = peg$literalExpectation("\\alpha", false),
      peg$c174 = "\\beta",
      peg$c175 = peg$literalExpectation("\\beta", false),
      peg$c176 = "\\lambda",
      peg$c177 = peg$literalExpectation("\\lambda", false),
      peg$c178 = "\\gamma",
      peg$c179 = peg$literalExpectation("\\gamma", false),
      peg$c180 = "\\epsilon",
      peg$c181 = peg$literalExpectation("\\epsilon", false),
      peg$c182 = "\\rho",
      peg$c183 = peg$literalExpectation("\\rho", false),
      peg$c184 = "\\delta",
      peg$c185 = peg$literalExpectation("\\delta", false),
      peg$c186 = "\\sigma",
      peg$c187 = peg$literalExpectation("\\sigma", false),
      peg$c188 = "\\theta",
      peg$c189 = peg$literalExpectation("\\theta", false),
      peg$c190 = peg$otherExpectation("whitespace or endline"),
      peg$c191 = /^[ \t\r\n]/,
      peg$c192 = peg$classExpectation([" ", "\t", "\r", "\n"], false, false),
      peg$c193 = /^[0-9.]/,
      peg$c194 = peg$classExpectation([["0", "9"], "."], false, false),
      peg$c195 = function(digits) {
          return new LatexCharacter(digits.join(''));
      },

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseroot() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseexpression();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseexpression();
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseexpression() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseunit();
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseunit();
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c1(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$parseexpression_curly_bracketed();
      if (s0 === peg$FAILED) {
        s0 = peg$parseexpression_round_bracketed();
        if (s0 === peg$FAILED) {
          s0 = peg$parseexpression_square_bracketed();
        }
      }
    }

    return s0;
  }

  function peg$parseexpression_curly_bracketed() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 123) {
      s1 = peg$c2;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c3); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseroot();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 125) {
          s3 = peg$c4;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c5); }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c6(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseexpression_round_bracketed() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 40) {
      s1 = peg$c7;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c8); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseroot();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 41) {
          s3 = peg$c9;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c10); }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c11(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseexpression_square_bracketed() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 91) {
      s1 = peg$c12;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c13); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseroot();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 93) {
          s3 = peg$c14;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c15); }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c16(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseunit() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parsefunction();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c17(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsedegrees();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c17(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseenvironment();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c17(s1);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parsecalcunit();
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c17(s1);
          }
          s0 = s1;
        }
      }
    }

    return s0;
  }

  function peg$parsedegrees() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;
